k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-application
  labels:
    app: cloud-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-application
  template:
    metadata:
      labels:
        app: cloud-application
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
      - name: cloud-application
        image: container-registry.br-se1.magalu.cloud/${MGC_REGISTRY_NAME}/cloud-application:${IMAGE_TAG}
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /livez
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 2

---

apiVersion: v1
kind: Service
metadata:
  name: cloud-application
spec:
  selector:
    app: cloud-application
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-application
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-application
            port:
              number: 80
